add missing env var

--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -21,6 +21,7 @@ jobs:
         env:
           KERNELDIR: linux
           ZFSDIR: zfs
+          KCONFIG_CONFIG: Microsoft/config-wsl
         run:
           ./source.sh
           ./build.sh
